# Intrusion-Detection-Log-Analyzer

./: AttackAnalyzer.cpp  AttackAnalyzer.h  CLI_GUI_COMPARISON.md  CustomHashTable.h  CustomQueue.h  LogList.cpp  LogList.h  LogNode.h  PCAP_USAGE.md  PROJECT_REPORT.md  README.md  demo_all_cases.pcap  generate_demo_pcap.py  main.cpp  pcap_to_logs.py
Samle_pcaps/: demo_failed_login.pcap
Sample_logs/: logs.txt
deploy/ShadowIDS_GUI_Portable/: DEPLOY_README.txt  README.md  logs.txt
gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main_gui.cpp
